[package]
name = "mikado"
description = "Microphone, Camera and Display"
version = "0.1.0"
edition = "2021"
build = "build/main.rs"

[dependencies]
thiserror = "1.0"

[target.'cfg(target_os = "macos")'.dependencies.icrate]
version = "0.1.0"
features = ["AppKit", "AppKit_NSScreen", "Foundation_NSThread"]

[build-dependencies]
bindgen = "0.69.0"
